<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/_00"
        android:textIsSelectable="true"
        android:textSize="60sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/ltgray"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonChangeSign"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/ltgray"
                android:text="@string/changeSign"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonPerc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/ltgray"
                android:text="@string/perc"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonDiv"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/div"
                android:textIsSelectable="true"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_7"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_8"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_9"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonMul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/mul"
                android:textIsSelectable="true"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_4"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_5"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_6"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonSub"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/sub"
                android:textIsSelectable="true"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_1"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_2"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_3"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/sum"
                android:textIsSelectable="true"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDummy"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#9D9D9D"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/drgray"
                android:text="@string/_0"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonDot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#9D9D9D"
                android:text="@string/dot"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonRes"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/res"
                android:textIsSelectable="true"
                android:textSize="34sp" />
        </TableRow>

    </TableLayout>


</LinearLayout>